[package]
name = "sugars"
version = "2.0.0"
authors = ["GrayJack <gr41.j4ck@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/GrayJack/sugars"
documentation = "https://docs.rs/sugars"
homepage = "https://crates.io/crates/sugars"
description = "A collection of macros in Rust to make tasks easier and less verbose"
categories = ["rust-patterns"]
keywords = ["sugar", "sugars", "macro"]
exclude = ["/.travis.yml", "/.github"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
